--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: A workflow for my Hello World file
+name: A workflow for my Hello Beta-World file
 on: push
 
 jobs:
   build:
-    name: Hello world action
+    name: Hello beta-world action
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: ./action-a
         env:
-          MY_NAME: "Mona"
+          MY_NAME: "Casanova"
